[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/UI/wooden reg btn.png" type="Texture" id=1]
[ext_resource path="res://Assets/Font/fonts/source-code-pro/source-code-pro-2.010R-ro-1.030R-it/TTF/SourceCodePro-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Font/fonts/Pangolin/Pangolin-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Login/LoginScene.gd" type="Script" id=4]
[ext_resource path="res://Assets/UI/MainPage.jpg" type="Texture" id=5]
[ext_resource path="res://Assets/UI/UI Logo.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/wooden reg btn-hover.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/wooden board.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_color = Color( 0.0901961, 0.0784314, 0.0784314, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 1218, 433 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 1218, 433 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 1217, 432 )

[sub_resource type="DynamicFont" id=10]
size = 70
extra_spacing_top = 13
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 1218, 433 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 1218, 433 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 1217, 432 )

[sub_resource type="DynamicFont" id=14]
size = 70
extra_spacing_top = 20
font_data = ExtResource( 3 )

[node name="LoginScene" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
rect_min_size = Vector2( 1920, 1080 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.498505
anchor_right = 0.5
anchor_bottom = 0.498505
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
rect_min_size = Vector2( 1920, 1080 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI Logo" type="Sprite" parent="Background"]
position = Vector2( 932.895, 183.875 )
scale = Vector2( 0.247087, 0.247087 )
texture = ExtResource( 6 )

[node name="wooden board" type="Sprite" parent="Background"]
position = Vector2( 844.178, 630.23 )
scale = Vector2( 1.04012, 0.704347 )
texture = ExtResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 559.0
margin_top = 330.0
margin_right = -608.0
margin_bottom = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Background/VBoxContainer"]
visible = false
margin_right = 1220.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 1 )
text = "Physic Lab"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="Background/VBoxContainer"]
margin_right = 753.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="EmailTitle" type="Label" parent="Background/VBoxContainer"]
margin_top = 54.0
margin_right = 753.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 2 )
text = "Email"

[node name="Email" type="LineEdit" parent="Background/VBoxContainer"]
margin_top = 109.0
margin_right = 753.0
margin_bottom = 159.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 3 )

[node name="PasswordTitle" type="Label" parent="Background/VBoxContainer"]
margin_top = 163.0
margin_right = 753.0
margin_bottom = 214.0
custom_fonts/font = SubResource( 4 )
text = "Password"

[node name="Password" type="LineEdit" parent="Background/VBoxContainer"]
margin_top = 218.0
margin_right = 753.0
margin_bottom = 268.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 5 )
secret = true

[node name="ErrorNotification" type="Label" parent="Background/VBoxContainer"]
margin_top = 272.0
margin_right = 753.0
margin_bottom = 304.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.501961, 0.0313726, 0.0313726, 1 )

[node name="MarginContainer2" type="MarginContainer" parent="Background/VBoxContainer"]
margin_top = 308.0
margin_right = 753.0
margin_bottom = 358.0
rect_min_size = Vector2( 0, 50 )

[node name="Login" type="Button" parent="Background/VBoxContainer"]
margin_top = 362.0
margin_right = 753.0
margin_bottom = 463.0
rect_min_size = Vector2( 500, 100 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
text = "Login"

[node name="CreateAccount" type="Button" parent="Background/VBoxContainer"]
margin_top = 467.0
margin_right = 753.0
margin_bottom = 575.0
rect_min_size = Vector2( 500, 100 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
custom_fonts/font = SubResource( 14 )
text = "Create Account"

[node name="TextureButton" type="TextureButton" parent="Background/VBoxContainer"]
margin_top = 579.0
margin_right = 753.0
margin_bottom = 579.0

[node name="HttpPost" type="HTTPRequest" parent="."]
[connection signal="pressed" from="Background/VBoxContainer/Login" to="." method="_on_Login_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/CreateAccount" to="." method="_on_CreateAccount_pressed"]
[connection signal="request_completed" from="HttpPost" to="." method="_on_HttpPost_request_completed"]
